--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
   <meta name="description" content="Web site created using create-react-app" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Rueda de la fortuna</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CBPK53570L"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-CBPK53570L');
+  </script>
 </head>
 
 <body>
